welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:24: error: ':' expected but ')' found.
def col(h) {
         ^Array1:34: error: identifier expected but '}' found.
}
^